<resources>
    <string name="app_name">Trabajo Practico</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_card">Test Name</string>
    <string name="model_card">test model (20xx)</string>
    <string name="settings_title">SETTINGS</string>
    <string name="settings_logout">log out</string>
    <string name="toolbar_detail">Detalle</string>
    <string name="toolbar_tools_search">Search</string>
    <string name="toolbar_tools_share">Share</string>
    <string name="toolbar_tools_settings">Settings</string>
    <string name="toolbar_tools_title">Disponibles</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="text_start_session">START SESSION</string>
    <string name="tab1_detail">Producto</string>
    <string name="tab2_detail">Detalles</string>
    <string name="detail_toolbar_title">Product</string>
    <string name="form_title">FORM</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="desciption">Description</string>
    <string name="url_hint">URL img</string>
    <string name="tab1_tab_title">Producto</string>
    <string name="tab2_tab_title">Detalle</string>
    <string name="key_darkmode">key_darkmode</string>
    <string name="summary_darkmode">(Afecta solo las vistas)</string>
    <string name="title_darkmode">Dark Mode</string>
    <string name="logout_button">log out</string>
    <string name="app_summary">Catálogo de Instrumentos 2019</string>
    <string name="key_app_summary">key_app_summary</string>
    <string name="user_email">email</string>
    <string name="msg_login_error">Login Error: Bad Username/Password.</string>
    <string name="product_not_found">Error: Product Not Found</string>
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="crear_cuenta">Completa los campos:</string>
    <string name="password_hint_confirm">Confirmar Password</string>
    <string name="name_hint">Nombre</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="aplication_title">ProMusica</string>
</resources>
